--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "Rangga",
     "Portfolio",
     "Developer",
+    "Engineer",
     "Fullstack Developer",
     "Front-end Developer",
     "Back-end Developer",
