--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "Fullstack Developer",
     "Front-end Developer",
     "Back-end Developer",
+    "Software Engineer",
     "Software Developer",
     "Cloud Engineer",
     "Cloud Architect"
